[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/rapir.png" type="Texture" id=1]
[ext_resource path="res://scripts/Vapen.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 0.999866
height = 74.0003

[node name="Vapen" type="Area2D" groups=["Vapen"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 30, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 30, 0 )
rotation = 1.5708
scale = Vector2( 0.5, 0.59375 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="area_entered" from="." to="." method="_on_Vapen_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Vapen_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
